# ctk_themio

./: .gitignore  CHANGELOG.md  CLAUDE.md  IDEA.md  README.md  TODO.md  build.sh  install.sh  publish.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
.swarm/: dark-matter.md  doc-manifest.json  knowledge.jsonl  telemetry.jsonl
.swarm/session/: state.json
docs/: _config.yml  index.md  theme-schema.md
src/ctk_themio/: __init__.py  __main__.py  paths.py
src/ctk_themio/controller/: __init__.py  ctk_theme_builder.py
src/ctk_themio/demo/: __init__.py  app.py
src/ctk_themio/model/: __init__.py  ctk_theme_builder.py  preferences.py
src/ctk_themio/utils/: cbtk_kit.py  color_constants.py  ctk_theme_builder_qa_app.py  ctk_theme_migrate.py  loggerutl.py
src/ctk_themio/view/: __init__.py  about.py  control_panel.py  ctk_button_dnd.py  ctk_theme_preview.py  export_import.py  geometry_dialog.py  harmonics_dialog.py  preferences.py  provenance_dialog.py  theme_merger.py  view_utils.py
tests/: test_cbtk_kit.py  test_migrate.py  test_paths.py  test_preferences.py
