[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ctk_themio"
dynamic = ["version"]
description = "Visual theme editor for CustomTkinter applications with WYSIWYG preview"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Clive Bostock" },
]
maintainers = [
    { name = "Adam Twardoch" },
]
keywords = ["customtkinter", "theme", "gui", "tkinter", "theme-editor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.13"
dependencies = [
    "colorharmonies>=1.0.5",
    "colour>=0.1.5",
    "CTkMessagebox>=2.5",
    "CTkToolTip>=0.8",
    "customtkinter>=5.2.2",
    "darkdetect>=0.8.0",
    "fonttools>=4.49.0",
    "loguru>=0.7.2",
    "matplotlib>=3.8.3",
    "numpy>=1.26.4",
    "pathvalidate>=3.2.0",
    "pillow>=10.2.0",
    "platformdirs>=4.0",
    "pyperclip>=1.8.2",
]

[project.urls]
Homepage = "https://github.com/twardoch/ctk_themio"
Repository = "https://github.com/twardoch/ctk_themio"
Issues = "https://github.com/twardoch/ctk_themio/issues"

[project.scripts]
ctk-themio = "ctk_themio.controller.ctk_theme_builder:main"
ctk-themio-demo = "ctk_themio.demo:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build]
include = [
    "src/ctk_themio/**",
    "src/ctk_themio/assets/**",
    "src/ctk_themio/user_themes/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ctk_themio"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "LICENSE",
    "README.md",
]
