[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ctk_themio"
dynamic = ["version"]
description = "Visual theme editor for CustomTkinter applications with WYSIWYG preview"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Clive Bostock" },
]
maintainers = [
    { name = "Adam Twardoch" },
]
keywords = ["customtkinter", "theme", "gui", "tkinter", "theme-editor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.13"
dependencies = [
    "colorharmonies>=1.0.5",
    "colour>=0.1.5",
    "CTkMessagebox>=2.5",
    "CTkToolTip>=0.8",
    "customtkinter>=5.2.2",
    "darkdetect>=0.8.0",
    "fonttools>=4.49.0",
    "loguru>=0.7.2",
    "matplotlib>=3.8.3",
    "numpy>=1.26.4",
    "pathvalidate>=3.2.0",
    "pillow>=10.2.0",
    "platformdirs>=4.0",
    "pyperclip>=1.8.2",
]

[project.urls]
Homepage = "https://github.com/twardoch/ctk_themio"
Repository = "https://github.com/twardoch/ctk_themio"
Issues = "https://github.com/twardoch/ctk_themio/issues"

[project.scripts]
ctk-themio = "ctk_themio.controller.ctk_theme_builder:main"
ctk-themio-demo = "ctk_themio.demo:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build]
include = [
    "src/ctk_themio/**",
    "src/ctk_themio/assets/**",
    "src/ctk_themio/user_themes/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ctk_themio"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "LICENSE",
    "README.md",
]

# ---------------------------------------------------------------------------
# Dev / test tooling
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.envs.hatch-test]
# Theme-generation and preference logic is tested headless; no display needed.
extra-dependencies = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic set for a mature Tkinter GUI: pyflakes, a slice of pycodestyle,
# import sorting, and pyupgrade. We do not chase every stylistic nit in
# long-lived view code.
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length is handled by the formatter, not enforced hard
    "E741",  # ambiguous names (l, O) appear in color math; harmless here
    "B008",  # default-arg calls are idiomatic in some CTk widget wiring
]

[tool.ruff.lint.per-file-ignores]
# GUI entry points keep a runnable `__main__` demo block that references
# module-local widgets; that is intentional scaffolding, not dead code.
"src/ctk_themio/view/*.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = false
# The GUI layer is dynamically typed against CustomTkinter. We type-check the
# headless logic (colour maths, preferences store, paths, theme migration) and
# leave the widget wiring untyped. `files` is what a bare `mypy` invocation
# checks, since command-line paths bypass `exclude`.
check_untyped_defs = false
exclude = ["src/ctk_themio/view/", "src/ctk_themio/demo/"]
files = [
    "src/ctk_themio/paths.py",
    "src/ctk_themio/model/preferences.py",
    "src/ctk_themio/utils/cbtk_kit.py",
    "src/ctk_themio/utils/color_constants.py",
    "src/ctk_themio/utils/ctk_theme_migrate.py",
]
